[package]
name = "localpm"
description = "A simple \"package\" manager for /usr/local"
version = "0.1.0"
edition = "2021"
authors = ["poscat <poscat@poscat.moe>"]

license = "BSD-3"
keywords = ["package-manager"]
categories = ["command-line-utilities"]

[dependencies]
tokio = "1.40"
xz2 = "0.1"
flate2 = "1.0"
include_dir = "0.7"
toml = "0.8"
serde_json = "1.0"
serde = "1.0"

[dependencies.clap]
version = "4.5"
features = ["cargo", "derive"]

[dependencies.octocrab]
version = "0.41"
features = ["hyper-tls"]

[dependencies.reqwest]
version = "0.12"
features = ["native-tls-vendored", "stream"]

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 'z'
incremental = true
lto = true
strip = true
panic = "abort"
